--- a/src/templates/theme.css
+++ b/src/templates/theme.css
@@ -147,4 +147,6 @@ img + p {
 
 img {
   margin-bottom: 2rem;
+  max-width: 100%;
+  height: auto;
 }
